cluster/homelab/apps/external/overseerr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: overseerr
  namespace: external
spec:
  ports:
    - name: overseerr-port
      port: 5055
      targetPort: 5055
      protocol: TCP
